Combine Anemometer and Vane entities into Wind entity
Rename TimeStamp column to Timestamp

Remove compass direction column from database

Switch to asynchronously fetching wind data

Add new migration

--- a/WindStations.WebUI/Components/Pages/Wind.razor
+++ b/WindStations.WebUI/Components/Pages/Wind.razor
@@ -157,7 +157,7 @@
 
     protected override async Task OnInitializedAsync()
     {
-        _windData = windService.GetWindData();
+        _windData = await windService.GetWindDataAsync();
         _hubConnection = new HubConnectionBuilder()
         .WithUrl(navigation.ToAbsoluteUri("/dataUpdates"))
         .Build();
