Fix: Sequence contains no elements exception
Display NaN on UI for null values in empty database

--- a/WindStations.WebUI/Components/Cards.razor
+++ b/WindStations.WebUI/Components/Cards.razor
@@ -10,10 +10,10 @@
     <NavLink href="wind" class="col-6 col-lg-3 nav-card">
         @if (_isDataReady)
         {
-            <div id="wind" class="e-card @_isWindSelected @((_currentWindSpeed < gradientService.WindGradients[0].Max) ? "low" : "")"
-                 style="--wind-color: @gradientService.GetRangeColor(_currentWindSpeed)" @onclick="windClick">
+            <div id="wind" class="e-card @_isWindSelected @(((_currentWindSpeed ?? 0) < gradientService.WindGradients[0].Max) ? "low" : "")"
+                 style="--wind-color: @gradientService.GetRangeColor(_currentWindSpeed ?? 0)" @onclick="windClick">
                 <div style="display: flex; justify-content: flex-start">
-                    <h3>@Math.Round(_currentWindSpeed) kts</h3>
+                    <h3>@(_currentWindSpeed.HasValue ? Math.Round(_currentWindSpeed.Value) : "NaN") kts</h3>
                     @* <img id="wind-direction" src="images/arrow.png" alt="Direction" style="transform: rotate(@(direction)deg)" /> *@
                     <svg id="wind-direction" version="1.0" xmlns="http://www.w3.org/2000/svg"
                          viewBox="0 0 512 512" preserveAspectRatio="xMidYMid meet" style="transform: rotate(@(_currentWindDirection)deg)">
@@ -74,7 +74,7 @@
         @if (_isDataReady)
         {
             <div id="temperature" class="e-card @_isTemperatureSelected" style="--temperature-color: #e56c30" @onclick="temperatureClick">
-                <h3>@Math.Round(_currentTemperature) °C</h3>
+                <h3>@(_currentTemperature.HasValue ? Math.Round(_currentTemperature.Value) : "NaN") °C</h3>
                 <div>
                     <span>Temperature</span>
                     @* <img src="images/temperature.png" alt="Temperature" class="card-icon" /> *@
@@ -123,7 +123,7 @@
         @if (_isDataReady)
         {
             <div id="humidity" class="e-card @_isHumiditySelected" style="--humidity-color: #308136" @onclick="humidityClick">
-                <h3>@(Math.Round(_currentHumidity))%</h3>
+                <h3>@(_currentHumidity.HasValue ? Math.Round(_currentHumidity.Value) : "NaN")%</h3>
                 <div>
                     <span>Humidity</span>
                     @* <img src="images/humidity.png" alt="Humidity" class="card-icon" /> *@
@@ -167,7 +167,7 @@
         @if (_isDataReady)
         {
             <div id="pressure" class="e-card @_isPressureSelected" style="--pressure-color: #2140dc" @onclick="pressureClick">
-                <h3>@Math.Round(_currentPressure) hPa</h3>
+                <h3>@(_currentPressure.HasValue ? Math.Round(_currentPressure.Value) : "NaN") hPa</h3>
                 <div>
                     <span>Pressure</span>
                     @* <img src="images/pressure.png" width="50" alt="Pressure" class="card-icon" /> *@
@@ -226,10 +226,10 @@
 
 @code {
     private float _currentWindDirection;
-    private float _currentWindSpeed;
-    private float _currentTemperature;
-    private float _currentHumidity;
-    private float _currentPressure;
+    private float? _currentWindSpeed;
+    private float? _currentTemperature;
+    private float? _currentHumidity;
+    private float? _currentPressure;
     private string _isWindSelected = "selected";
     private string _isTemperatureSelected = "";
     private string _isHumiditySelected = "";
