Add temporary manual offset to wind direction. Later it will be received as an MQTT message during station initialization
Convert wind speeds from m/s to knots

Add missing one decimal place rounding for average wind speed data label

--- a/WindStations.WebUI/Components/Pages/Wind.razor
+++ b/WindStations.WebUI/Components/Pages/Wind.razor
@@ -128,7 +128,7 @@
                                 @{
                                     var data = context as ChartDataPointInfo;
                                     <div style="display:flex;flex-direction:column;align-items:center">
-                                        <div>@Math.Round(Convert.ToDouble(data.Y))</div>
+                                        <div>@Math.Round(Convert.ToDouble(data.Y), 1)</div>
                                         <img id="chart-direction-arrow" src="images/arrow.png" alt="Arrow" style="transform:rotate(@(data.Text)deg)" />
                                     </div>
                                 }
